#6184 Fix layout of password reset on mobile, fix project description color

--- a/src/app/styles/components/project/_project.scss
+++ b/src/app/styles/components/project/_project.scss
@@ -20,7 +20,7 @@
 
 .project__description {
   // see also .header__container
-  background: $black-05;
+  background: $black-02;
   display: flex;
   flex-direction: column;
   font: font(caption);
